[package]
name = "no-await-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
no-await = {path = "../no-await"}
tokio = {version = "1.15.0", features = ["macros", "rt-multi-thread"]}
