[package]
name = "suspend_fn_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full"] }
take_mut = "0.2.2"
