[package]
name = "suspend_fn_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
suspend_fn = {path = "../suspend_fn"}
tokio = {version = "1.15.0", features = ["macros", "rt-multi-thread"]}
rand = "0.8.4"
